--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml.
 baseurl: "/" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+#url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://kdj9384.github.io"
 twitter_username: jekyllrb
 github_username:  jekyll
 
