--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml.
 baseurl: /
-#url: "http://yourdomain.com" # the base hostname & protocol for your site
-url: "http://kdj9384.github.io"
+url: "http://yourdomain.com" 
 twitter_username: jekyllrb
 github_username:  jekyll
 
