--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml.
 baseurl: /
-url: "http://yourdomain.com" 
+url: "http://Kdj9384.github.io" 
 twitter_username: jekyllrb
 github_username:  jekyll
 
