--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Opensource Project by 강동진
 email: djkang98@naver.com
 description: > # this means to ignore newlines until "baseurl:"
   Project Blog
-baseurl: / 
+baseurl: Project Blog/ 
 url: http://Kdj9384.github.io # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
