--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # Site settings
 title: Opensource Project by 강동진
 email: djkang98@naver.com
-description: > # this means to ignore newlines until "baseurl:"
-  Project Blog
-baseurl: Project Blog/ 
+description: 
+wow
+> # this means to ignore newlines until "baseurl:"
+baseurl: / 
 url: http://Kdj9384.github.io # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
