--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title: Opensource Project by 강동진
 email: djkang98@naver.com
 description: > # this means to ignore newlines until "baseurl:"
-  nothing changeed
-baseurl: nothin/change 
+baseurl: nothing changed maybe/
 url: http://Kdj9384.github.io # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
