--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Opensource Project by 강동진
 email: djkang98@naver.com
 description: > # this means to ignore newlines until "baseurl:"
-baseurl: nothing changed maybe/
+baseurl: /
 url: http://Kdj9384.github.io # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
